name:                sansa
version:             0.1.0.0
synopsis:            RPC frontend for aria2
license:             BSD2
license-file:        LICENSE
author:              Hans-Peter Deifel
maintainer:          hpd@hpdeifel.de
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable sansa
  main-is:             Main.hs
  other-modules:       JsonRPC,
                       Aria2.Commands,
                       Aria2.Types
                       Sansa.CommandsCommon
                       Sansa.Commands
                       Sansa.Commands.Add
                       Sansa.Commands.AddFromFile
                       Sansa.Commands.Pause
                       Sansa.Commands.Unpause
                       Sansa.Commands.Remove
  build-depends:       base >=4.7 && <4.8, text >= 1.2 && <1.3, aeson >= 0.8 && <0.9, network-uri >= 2.6 && <2.7,
                       bytestring >= 0.10 && <0.11, HTTP >= 4000.2 && < 4000.3,
                       time >= 1.4 && <1.5, optparse-applicative >= 0.11 && < 0.12,
                       transformers >= 0.4 && <0.5, ansi-wl-pprint >= 0.6 && <0.7
  hs-source-dirs:      src
  default-language:    Haskell2010
